# stac-workshop

./: README.md  environment.yml  pyproject.toml  stac_notebook.py
src/: 01_consume_stac.py  app.py
