[project]
description = "A workshop introduction to STAC"
name = "stac-workshop"
requires-python = ">=3.10"
version = "0.1.0"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
stac-workshop = { path = ".", editable = true }

[tool.pixi.dependencies]
ruff = ">=0.15.1,<0.16"
marimo = ">=0.19.11,<0.20"
gdal = ">=3.12.2,<4"
pystac = ">=1.14.3,<2"
pystac-client = ">=0.9.0,<0.10"

[tool.pixi.tasks]
edit = "marimo edit stac_notebook.py"
lint = "ruff check ."
format = "ruff format ."

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
]

[tool.marimo.save]
autosave = "after_delay"
autosave_delay = 1000
format_on_save = true

[tool.marimo.package_management]
manager = "pixi"
